# CaSSiS

./: .gitignore  CMakeLists.txt  README.md  package.cmake
cassis/: CMakeLists.txt  bgrt.cpp  bgrt.h  config.h.in  indexinterface.h  io.cpp  io.h  namemap.cpp  namemap.h  pool.cpp  pool.h  search.cpp  search.h  thermodynamics.cpp  thermodynamics.h  tree.cpp  tree.h  types.h
cassis-cli/: CMakeLists.txt  classic_csv.cpp  classic_csv.h  complement.h  fasta.cpp  fasta.h  gen-signatures.cpp  gen-signatures.h  main.cpp  newick.cpp  newick.h  parameters.cpp  parameters.h  statistics.h
cassis-cli/file/: fasta.cpp  sigfile.cpp  sigfile.h  txtfiles.cpp  txtfiles.h
cassis-gui/: CMakeLists.txt  linechart.cpp  linechart.h  main.cpp  mainwindow.cpp  mainwindow.h  resulttab.cpp  resulttab.h  tree.cpp  tree.h  treeview.cpp  treeview.h
doc/: changelog.txt  readme.txt
doc/test-trees/: 100.tree
minipt/: CMakeLists.txt  buildtree.cpp  findex.cpp  io.h  match.cpp  match.h  probe.h  strbuf.cpp  strbuf.h
src/: CMakeLists.txt  package.cmake
src/lib/arb/: CMakeLists.txt  ptserver.cpp  tree.cpp  tree.h
src/lib/cassis/: CMakeLists.txt  bgrt.h  config.h.in  indexinterface.h  pool.cpp  search.cpp  search.h  thermodynamics.cpp  tree.cpp  tree.h  types.h
src/lib/minipt/: CMakeLists.txt  buildtree.h  findex.h  io.cpp  license.txt  minipt.cpp  minipt.h  prefixtree.cpp  prefixtree.h  probe-tree.h  probe.h
src/main/cassis/: CMakeLists.txt  gen-signatures.cpp  gen-signatures.h  main.cpp  parameters.cpp  parameters.h  statistics.h
src/main/cassis-gui/: CMakeLists.txt  linechart.h  mainwindow.cpp  tree.h  treeview.cpp
src/main/cassis-gui/resources/: cdcassis.qrc
src/main/dup-index/: CMakeLists.txt  dup-idx.dup  dup-index-client.cpp  dup-index-client.h  dup-index-dump.cpp  dup-index-filter.cpp  dup-index-scatter.cpp  dup-index-server.cpp  dup-io.cpp  dup-io.h  dup-test.cpp
src/main/dup-index/temp/: deprecated.cpp  dup-index-client.h  dup-index-server.cpp  dup-index.h
src/main/tools/: CMakeLists.txt  bgrt2graphviz.cpp  bgrtmerge.cpp  index-daemon.cpp  indexserver-daemon.cpp  interface-client.cpp  interface-client.h  interface-server.cpp  merge.h  thermodynamics.cpp  treetest.cpp
src/shared/: csv.cpp  csv.h  fasta.cpp  fasta.h  newick.cpp  newick.h  sigfile.cpp  sigfile.h
tools/: CMakeLists.txt  bgrtinfo.cpp  bgrtmerge.cpp  index-server.cpp  merge.cpp  merge.h
